# dbrownell_DevTools

./: .copier-answers.yml  .gitignore  ActivateEpilog.py  Build.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  minisign_key.pub  pyproject.toml
.github/: AutoGitSemVer.yaml  UpdateCITags.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/build_python_binary_impl/: action.yml
.github/actions/create_docker_image_impl/: action.yml
.github/actions/initialize/: action.yml
.github/actions/package/: action.yml
.github/actions/package_python_impl/: action.yml
.github/actions/publish_python_impl/: action.yml
.github/actions/python_build_binary_impl/: action.yml
.github/actions/python_package/: action.yml
.github/actions/python_package_impl/: action.yml
.github/actions/python_publish/: action.yml
.github/actions/python_publish_impl/: action.yml
.github/actions/python_validate/: action.yml
.github/actions/python_validate_impl/: action.yml
.github/actions/validate/: action.yml
.github/actions/validate_python_binary_impl/: action.yml
.github/actions/validate_python_impl/: action.yml
.github/actions/validate_python_package_impl/: action.yml
.github/tools/: CreatePythonBinaryArchive.py  InstallPythonWheel.py  OrganizePythonArtifacts.py  standard.template.yaml
.github/workflows/: callable_action_contexts.yaml  callable_create_docker_image.yaml  callable_create_python_binaries.yaml  callable_create_python_binary.yaml  callable_create_python_package.yaml  callable_display_action_contexts.yaml  callable_package_python_coverage.yaml  callable_publish_python.yaml  callable_python_binary.yaml  callable_python_package.yaml  callable_python_package_coverage.yaml  callable_python_publish.yaml  callable_python_validate.yaml  callable_validate_python.yaml  callable_validate_python_binary.yaml  callable_validate_python_package.yaml  codeql.yml  standard.yaml  standard.yml
src/: AutoGitSemVer.yaml
src/dbrownell_DevTools/: BuildActivities.py  Output2Markdown.py  PythonBuildActivities.py  __init__.py
src/dbrownell_DevTools/RepoBuildTools/: Python.py  README.md
src/dbrownell_DevTools/Scripts/: ShowScripts.py
src/dbrownell_DevTools/Scripts/CommitEmojis/: __main__.py  categories.json
src/dbrownell_DevTools/Scripts/CommitEmojis/Gitmoji/: gitmojis.json  schema.json  update_data.py
src/dbrownell_DevTools/Scripts/Python/: MatchTests.py  VSCodeTests.py
tests/: BuildActivities_EndToEndTest.py  BuildActivities_UnitTest.py  Output2Markdown_UnitTest.py  PythonBuildActivities_UnitTest.py
tests/RepoBuildTools/: Python_UnitTest.py
tests/RepoBuildTools/PythonTests/: MyModule.py  MyModule_UnitTest.py  __init__.py
tests/Scripts/: Output2Markdown_UnitTest.py  ShowScripts_EndToEndTest.py
tests/Scripts/CommitEmojis/: __main___EndToEndTest.py
tests/Scripts/Python/: MatchTests_EndToEndTest.py  VSCodeTests_EndToEndTest.py
