# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

# ----------------------------------------------------------------------
# |
# |  Project
# |
# ----------------------------------------------------------------------
[project]
name = "dbrownell_DevTools"
description = "Common development tools shared across different repositories."

license = { text = "MIT" }

authors = [
    { name = "David Brownell", email = "github@DavidBrownell.com" },
]

keywords = [
    # TODO: Add keywords specific to your project.
]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dependencies = [
    "ansi2html ~= 1.9",
    "AutoGitSemVer == 0.*",
    "black ~= 24.4",
    "cogapp ~= 3.4",
    "coverage ~= 7.5",
    "dbrownell_Common == 0.*",
    "pylint ~= 3.1",
    "pytest ~= 7.4",
    "pytest-benchmark ~= 4.0",
    "pytest-cov ~= 4.1",
    "tomli ~= 2.0; python_version < '3.11'",
]

dynamic = [
    "version",
]

readme = "README.md"

[project.optional-dependencies]
dev = [
    "cx_Freeze ~= 6.15",
]

package = [
    "build ~= 1.2",
    "twine ~= 5.1",
]

[project.scripts]
output2markdown = "dbrownell_DevTools.Scripts:Output2Markdown.app"
show_scripts = "dbrownell_DevTools.Scripts:ShowScripts.app"

# CommitEmojis
commit_emojis = "dbrownell_DevTools.Scripts.CommitEmojis.__main__:app"

# Python
match_tests = "dbrownell_DevTools.Scripts.Python:MatchTests.app"
vscode_tests = "dbrownell_DevTools.Scripts.Python:VSCodeTests.app"

[project.urls]
Homepage = "https://github.com/davidbrownell/dbrownell_DevTools"
Documentation = "https://github.com/davidbrownell/dbrownell_DevTools"
Repository = "https://github.com/davidbrownell/dbrownell_DevTools"

# ----------------------------------------------------------------------
# |
# |  black
# |
# ----------------------------------------------------------------------
[tool.black]
line-length = 100

# ----------------------------------------------------------------------
# |
# |  pylint
# |
# ----------------------------------------------------------------------
[tool.pylint.basic]
class-const-naming-style = "any"
function-naming-style = "PascalCase"
good-names = [
    "i",
    "j",
    "k",
    "ex",
    "Run",
    "_",
    "dm",                                   # added
    "f",                                    # added
]
method-naming-style = "any"
module-naming-style = "PascalCase"

[tool.pylint.design]
max-args = 10
max-parents = 15

[tool.pylint.main]
ignore-paths = [
    # Note that the pylint vscode extension has trouble with wrapping these patterns in quotes
    # (which is required to parse the file correctly). Because of this, each pattern must be
    # converted to a glob pattern and specified in the pylint vscode settings as well.
    "^.+?Tests/.*$",
]

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "assignment-from-no-return",            # added
    "broad-except",                         # added
    "broad-exception-raised",               # added
    "cell-var-from-loop",                   # added
    "consider-using-f-string",              # added
    "import-outside-toplevel",              # added
    "line-too-long",                        # added
    "missing-function-docstring",           # added
    "subprocess-run-check",                 # added
    "super-with-arguments",                 # added
    "too-few-public-methods",               # added
    "unnecessary-lambda-assignment",        # added
    "unspecified-encoding",                 # added
]

# ----------------------------------------------------------------------
# |
# |  pyright
# |
# ----------------------------------------------------------------------
[tool.pyright]
exclude = [
    "**/*Tests/*",
    "**/Generated/*",
]

reportMissingImports = true
reportMissingTypeStubs = false

# ----------------------------------------------------------------------
# |
# |  pytest
# |
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
python_files = [
    "**/*Test.py",
]

# ----------------------------------------------------------------------
# |
# |  setuptools
# |
# ----------------------------------------------------------------------
[tool.setuptools.dynamic]
version = { attr = "dbrownell_DevTools.__version__" }

[tool.setuptools.package-data]
dbrownell_DevTools = ["**/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
